added API access_role_modul and added uuidv4 every model
