# resource/schema/sys-access-roles-moduls.js
@@ -1,0 +1,18 @@
+const {
+  SysAccessRoleModulDefine,
+} = require("../models/sys-access-roles-moduls");
+
+const AccessRoleModulSchema = {
+  BodyAccessRoleModulSchema: {
+    id: "string",
+    role_name: "string",
+    role_access: [
+      {
+        role_id: "string",
+        modul_id: "string",
+      },
+    ],
+  },
+};
+
+module.exports = AccessRoleModulSchema;
